# cut-cherry

./: .gitignore  README.md  pyproject.toml
config/: cpu.yaml  cuda.yaml  default.yaml  logging.yaml
docs/: edit_banana_gap_analysis.md
models/: README.md
scripts/: download_models.py  patch_pp_structure_config.py  render_pptx.py  run_api.py  run_cli.py  setup_sam3.sh
src/image2pptx/api/: app.py  dependencies.py  routes.py  schemas.py
src/image2pptx/cli/: main.py
src/image2pptx/config/: device.py  settings.py
src/image2pptx/core/: cache.py  errors.py  image_utils.py  logging.py  paths.py
src/image2pptx/evaluation/: diff.py  metrics.py  pptx_preview.py  quality_report.py
src/image2pptx/ir/: __init__.py  candidates.py  elements.py  relations.py  slide_ir.py  styles.py  validators.py
src/image2pptx/models/: base.py  layout.py  lazy_loader.py  ocr.py  rmbg.py  sam3.py  vlm.py
src/image2pptx/pipeline/: context.py  orchestrator.py  stages.py
src/image2pptx/processors/: arrow_processor.py  candidate_fusion.py  chart_processor.py  formula_processor.py  geometry_processor.py  layer_decomposition.py  layout_parser.py  preprocess.py  sam3_processor.py  semantic_processor.py  shape_processor.py  table_processor.py  text_layer.py  text_processor.py  vlm_arbitration.py
src/image2pptx/renderers/: pptx_renderer.py  (+1 more)
tests/integration/: test_pipeline.py
tests/unit/: test_candidate_fusion.py  test_formula_chart_processors.py  test_geometry_processor.py  test_image_logo_assets.py  test_layer_decomposition.py  test_layout_model_adapter.py  test_layout_parser.py  test_orchestrator_logging.py  test_patch_pp_structure_config.py  test_rmbg_adapter.py  test_sam3_processor.py  test_slide_ir.py  test_table_processor.py  test_text_layer.py  test_text_processor.py  test_vlm_arbitration.py
(+2 files in other folders)
